@@ -1,10 +1,11 @@
-<table style="padding: 0px; margin: 0px; border: 1px dotted #333333; border-collapse: collapse; width: 100%">
+INCLUDE_STYLE=EXT:kb_nescefe/res/be_2cols.css
+<table class="nescefe-table nescefe-2cols">
 	<tr>
-		<td style="border: 1px dotted #333333; padding: 5px; vertical-align: top;">
+		<td>
 			###HEADER_0###
 			###CONTENT_0###
 		</td>
-		<td style="border: 1px dotted #333333; padding: 5px; vertical-align: top;">
+		<td>
 			###HEADER_1###
 			###CONTENT_1###
 		</td>
