@@ -1,16 +1,17 @@
-<table style="padding: 0px; margin: 0px; border: 1px dotted #333333; border-collapse: collapse; width: 100%">
+INCLUDE_STYLE=EXT:kb_nescefe/res/be_3cols.css
+<table class="nescefe-table nescefe-3cols" >
 	<tr>
-		<td style="border: 1px dotted #333333; padding: 5px; vertical-align: top;">
+		<td>
 			###HEADER_0###
 			###CONTENT_0###
 		</td>
-		<td style="border: 1px dotted #333333; padding: 5px; vertical-align: top;">
+		<td>
 			###HEADER_1###
 			###CONTENT_1###
 		</td>
 	</tr>
 	<tr>
-		<td colspan="2" style="border: 1px dotted #333333; padding: 5px; vertical-align: top;">
+		<td colspan="2">
 			###HEADER_2###
 			###CONTENT_2###
 		</td>
