@@ -1,14 +1,15 @@
-<table style="padding: 0px; margin: 0px; border: 1px dotted #333333; border-collapse: collapse; width: 100%">
+INCLUDE_STYLE=EXT:kb_nescefe/res/be_horiz_cols.css
+<table class="nescefe-table nescefe-horiz-cols">
 	<tr>
 		<!-- ###SECTION_0### begin -->
-		<td style="border: 1px dotted #333333; padding: 5px; vertical-align: top;">
+		<td>
 			###HEADER_0###
 			###CONTENT_0###
 		</td>
 		<!-- ###SECTION_0### end -->
 	</tr>
 	<tr>
-		<td colspan="###SECTIONCOUNT_0###" style="border: 1px dotted #333333; padding: 5px; vertical-align: top;">
+		<td colspan="###SECTIONCOUNT_0###">
 			###NEWSECTION_0###
 		</td>
 	</tr>
