@@ -5,6 +5,8 @@
 	* Fixed issues when creating new content elements in branches < 4.3
 	* Major rewrite of the tcemain hook class and copy/cut & paste handling
 	* Updated documentation
+	* Added a feature which allows to include custom CSS files for every BE-Template
+	* Added some doxygen documentation
 
 2010-06-29 Bernhard Kraft  <kraftb@think-open.at>
 
